k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: constructive-functions
  labels:
    name: constructive-functions
    environment: playground
